--- a/style.css
+++ b/style.css
@@ -49,3 +49,11 @@ h1{
     color: white;
     background-color: #FD5058;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    height: 100vh;
+}
